# vector

./: .gitattributes  Cargo.toml
.github/workflows/: changes.yml  cli.yml  cross.yml  deny.yml  environment.yml  integration.yml  k8s_e2e.yml  misc.yml  preview_site_trigger.yml  publish.yml  regression.yml  scorecard.yml  unit_mac.yml
lib/codecs/: Cargo.toml
lib/dnstap-parser/: Cargo.toml
lib/docs-renderer/: Cargo.toml
lib/file-source/: Cargo.toml
lib/tracing-limit/: Cargo.toml
lib/vector-api-client/: Cargo.toml
lib/vector-buffers/: Cargo.toml
lib/vector-buffers/examples/: buffer_perf.rs
lib/vector-common/: Cargo.toml
lib/vector-config/: Cargo.toml
lib/vector-config-common/: Cargo.toml
lib/vector-core/: Cargo.toml
lib/vector-lib/: Cargo.toml
lib/vector-lib/src/: lib.rs
lib/vector-stream/: Cargo.toml
lib/vector-tap/: Cargo.toml
lib/vector-vrl/tests/: Cargo.toml
vdev/: Cargo.toml
website/: package.json
