[workspace]
resolver = "2"
members = [
  "lib/vector-buffers",
  "lib/vector-common",
  "lib/vector-config",
  "lib/vector-config-common",
  "lib/vector-config-macros",
  "lib/vector-core",
  "lib/vector-lib",
  "lib/vector-lookup",
]

[workspace.dependencies]
cfg-if = { version = "1.0.0", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
chrono-tz = { version = "0.10.1", default-features = false, features = ["serde"] }
clap = { version = "4.5.30", default-features = false, features = ["derive", "error-context", "env", "help", "std", "string", "usage", "wrap_help"] }
futures = { version = "0.3.31", default-features = false, features = ["compat", "io-compat", "std"], package = "futures" }
indexmap = { version = "2.7.1", default-features = false, features = ["serde", "std"] }
inventory = { version = "0.3" }
metrics = "0.24.1"
metrics-tracing-context = { version = "0.17.0", default-features = false }
metrics-util = { version = "0.18.0", default-features = false, features = ["registry"] }
pin-project = { version = "1.1.9", default-features = false }
proptest = { version = "1.6" }
proptest-derive = { version = "0.5.1" }
prost = { version = "0.12", default-features = false, features = ["std"] }
prost-build = { version = "0.12", default-features = false }
prost-types = { version = "0.12", default-features = false }
serde = { version = "1.0.218", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.139", default-features = false, features = ["raw_value", "std"] }
snafu = { version = "0.7.5", default-features = false, features = ["futures", "std"] }
toml = { version = "0.8.20", default-features = false, features = ["display", "parse"] }
tonic = { version = "0.11", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots", "gzip"] }
uuid = { version = "1.12.0", features = ["v4", "v7", "serde"] }
vrl = { git = "https://github.com/vectordotdev/vrl", branch = "main", features = ["arbitrary", "cli", "test", "test_framework"] }

# Additional dependencies used by the libraries
darling = "0.20.10"
paste = "1.0.15"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rand_distr = { version = "0.4.3", default-features = false }
socket2 = { version = "0.5.7", default-features = false }
