[workspace]
resolver = "2"
members = [
  "lib/vector-buffers",
  "lib/vector-common",
  "lib/vector-common-macros",
  "lib/vector-config",
  "lib/vector-config-common",
  "lib/vector-config-macros",
  "lib/vector-core",
  "lib/vector-lib",
  "lib/vector-lookup",
]

[workspace.dependencies]
# Core dependencies from v0.53.0
async-trait = { version = "0.1.89", default-features = false }
bytes = { version = "1.10.1", default-features = false, features = ["serde"] }
cfg-if = { version = "1.0.3", default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
chrono-tz = { version = "0.10.4", default-features = false, features = ["serde"] }
clap = { version = "4.5.53", default-features = false, features = ["derive", "error-context", "env", "help", "std", "string", "usage", "wrap_help"] }
crossbeam-utils = { version = "0.8.21", default-features = false }
darling = { version = "0.20.11", default-features = false, features = ["suggestions"] }
dashmap = { version = "6.1.0", default-features = false }
derivative = { version = "2.2.0", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["compat", "io-compat", "std"], package = "futures" }
indexmap = { version = "2.11.0", default-features = false, features = ["serde", "std"] }
inventory = { version = "0.3" }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
metrics = "0.24.2"
metrics-tracing-context = { version = "0.17.0", default-features = false }
metrics-util = { version = "0.18.0", default-features = false, features = ["registry"] }
ordered-float = { version = "4.6.0", default-features = false }
paste = { version = "1.0.15" }
pin-project = { version = "1.1.10", default-features = false }
proptest = { version = "1.8" }
proptest-derive = { version = "0.6.0" }
prost = { version = "0.12", default-features = false, features = ["std"] }
prost-build = { version = "0.12", default-features = false }
prost-types = { version = "0.12", default-features = false }
rand = { version = "0.9.2", default-features = false, features = ["small_rng", "thread_rng"] }
rand_distr = { version = "0.5.1", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.143", default-features = false, features = ["raw_value", "std"] }
serde_yaml = { version = "0.9.34", default-features = false }
snafu = { version = "0.8.9", default-features = false, features = ["futures", "std"] }
socket2 = { version = "0.5.10", default-features = false }
tokio = { version = "1.45.1", default-features = false }
toml = { version = "0.9.8", default-features = false, features = ["serde", "display", "parse"] }
tonic = { version = "0.11", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots", "gzip"] }
tracing = { version = "0.1.34", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt"]  }
uuid = { version = "1.18.1", features = ["v4", "v7", "serde", "fast-rng"] }
# Minimal vrl feature set; drop unused stdlib + heavy transitive deps (psl,
# prost-reflect, jsonschema, datadog-grok/onig, ua-parser, domain). `test`
# keeps the string_path impls + `From<f64> for Value` helper.
vrl = { version = "0.30.0", default-features = false, features = ["compiler", "value", "core", "parser", "path", "diagnostic", "datadog_search", "test"] }

# Workspace path dependencies
vector-config = { path = "lib/vector-config" }
vector-config-common = { path = "lib/vector-config-common" }
vector-config-macros = { path = "lib/vector-config-macros" }
vector-common-macros = { path = "lib/vector-common-macros" }
vector-lib = { path = "lib/vector-lib", default-features = false, features = ["vrl"] }

[patch.crates-io]
# The upgrade for `tokio-util` >= 0.6.9 is blocked on https://github.com/vectordotdev/vector/issues/11257.
tokio-util = { git = "https://github.com/vectordotdev/tokio", branch = "tokio-util-0.7.13-framed-read-continue-on-error" }
nix = { git = "https://github.com/vectordotdev/nix.git", branch = "memfd/gnu/musl" }
