[package]
name = "docs-renderer"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing = { version = "0.1.44", default-features = false }
vector-config = { path = "../vector-config" }
vector-config-common = { path = "../vector-config-common" }
